// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GasNewDropCard matches snapshot with isMigrated = false 1`] = `
<div>
  <div
    class="group flex flex-col w-full gap-3 rounded-[10px] p-2 relative"
  >
    <div
      class="flex gap-1.5"
    >
      <div
        class="flex h-9 w-9 items-center justify-center rounded-md bg-[#3C80FF]/[.1]"
      >
        <img
          alt="new-drop-icon"
          src="[object Object]"
        />
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="text-sm font-medium font-normal text-white/[.5]"
        >
          Next Drop
        </p>
        <p
          class="text-sm text-white font-semibold"
        >
          -32
          <span
            class="text-base"
          >
            m
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`GasNewDropCard matches snapshot with isMigrated = true 1`] = `
<div>
  <div
    class="group flex flex-col w-full gap-3 rounded-[10px] p-2 relative"
  >
    <div
      class="absolute bottom-full mb-2 left-0 rounded-lg border border-white/[.05] bg-[#25232D] px-2.5 py-2 text-[10px] text-white italic font-normal opacity-0 group-hover:opacity-100 transition-all duration-200 z-10 max-w-max w-fit origin-bottom scale-y-0 group-hover:scale-y-100 transform"
    >
      This is the amount of gas used to migrate your assets over to PillarX.
    </div>
    <div
      class="flex gap-1.5"
    >
      <div
        class="flex h-9 w-9 items-center justify-center rounded-md bg-[#FFEA72]/[.1]"
      >
        <img
          alt="gas-icon"
          src="[object Object]"
        />
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="text-sm font-medium font-normal text-white/[.5]"
        >
          Gas Used
        </p>
        <p
          class="text-sm font-medium font-semibold text-white"
        >
          $
          999.00
        </p>
      </div>
    </div>
    <div
      class="flex gap-1.5"
    >
      <div
        class="flex h-9 w-9 items-center justify-center rounded-md bg-[#3C80FF]/[.1]"
      >
        <img
          alt="new-drop-icon"
          src="[object Object]"
        />
      </div>
      <div
        class="flex flex-col"
      >
        <p
          class="text-sm font-medium font-normal text-white/[.5]"
        >
          Next Drop
        </p>
        <p
          class="text-sm text-white font-semibold"
        >
          -32
          <span
            class="text-base"
          >
            m
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;
